k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boozeboard
  namespace: boozeboard
spec:
  selector:
    app: boozeboard
  ports:
    - port: 80
      targetPort: 3000
