k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boozeboard
  namespace: boozeboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: boozeboard.sl-information.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boozeboard
                port:
                  number: 80
